--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -14,15 +14,21 @@
         tools:targetApi="31">
         <activity
             android:name=".LoginActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.MyApplication" />
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true"
+            android:label="activity_signup"
+            android:theme="@style/Theme.MyApplication" />
+
         <!-- Main activity (Entry point of your application) -->
         <activity
             android:name=".MainActivity"
             android:exported="true"> <!-- This line is required for apps targeting API 31 or above -->
             <intent-filter>
-                <action android:naEme="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
