profile creation implementation

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         <activity
             android:name=".ConfirmationActivity"
             android:exported="false"/>
-        
+
+        <activity
+            android:name=".ProfileCreationDetailOne"
+            android:exported="true" />
         <!-- Main activity (Entry point of your application) -->
         <activity
             android:name=".MainActivity"
