--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -26,10 +26,11 @@
         <activity
             android:name=".ConfirmationActivity"
             android:exported="false"/>
-
         <activity
             android:name=".ProfileCreationDetailOne"
             android:exported="true" />
+        <activity android:name=".ProfileCreationDetailTwo"/>
+
         <!-- Main activity (Entry point of your application) -->
         <activity
             android:name=".MainActivity"
