--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
         android:name="android.hardware.camera"
         android:required="false" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+
 
     <application
         android:allowBackup="true"
@@ -15,8 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+
         <activity
             android:name=".LoginActivity"
             android:exported="true"
@@ -38,6 +43,13 @@
             android:name=".NotificationSignIn"
             android:exported="true" />
         <activity
+            android:name=".PreferenceTwo"
+            android:exported="true" />
+        <activity
+            android:name=".PreferenceOne"
+            android:exported="true" />
+
+        <activity
             android:name=".ProfileCreationDetailTwo"
             android:exported="true" />
         <activity
@@ -47,6 +59,13 @@
         <activity
             android:name=".TroubleSigningInActivity"
             android:label="Trouble Signing In"
+            android:theme="@style/Theme.MyApplication">
+        </activity>
+
+        <activity
+            android:name=".CameraActivity"
+            android:label="Camera Bruh"
+            android:exported="true"
             android:theme="@style/Theme.MyApplication">
         </activity>
 
