--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -37,6 +37,15 @@
             android:name=".ConfirmationActivity"
             android:exported="false"/>
         <activity
+            android:name=".chat"
+            android:exported="true"/>
+        <activity
+            android:name=".ChatAdapter"
+            android:exported="true"/>
+        <activity
+            android:name=".AllChatsActivity"
+            android:exported="true"/>
+        <activity
             android:name=".ProfileCreationDetailOne"
             android:exported="true" />
         <activity
