--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:name=".ChatAdapter"
             android:exported="true"/>
         <activity
+            android:name=".ChatMessage"
+            android:exported="true"/>
+        <activity
+            android:name=".SingleChatAdapter"
+            android:exported="true"/>
+        <activity
             android:name=".AllChatsActivity"
             android:exported="true"/>
         <activity
