chat send button.

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -126,6 +126,10 @@
             android:name=".ProfileCloneThree"
             android:exported="true" />
 
+        <activity
+            android:name=".SimpleChat"
+            android:exported="true" />
+
 
 
         <!-- Main activity (Entry point of your application) -->
