--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -129,6 +129,10 @@
             android:name=".ProfileCloneThree"
             android:exported="true" />
 
+        <activity
+            android:name=".AccountInfo"
+            android:exported="true" />
+
 
 
         <!-- Main activity (Entry point of your application) -->
