--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
     <application
         android:allowBackup="true"
+        android:enableOnBackInvokedCallback="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -136,9 +137,6 @@
             android:name=".AccountInfo"
             android:exported="true" />
 
-        <activity
-            android:name=".SimpleChat"
-            android:exported="true" />
         
         <!-- Main activity (Entry point of your application) -->
         <activity
