chat send button.

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -133,6 +133,9 @@
             android:name=".AccountInfo"
             android:exported="true" />
 
+        <activity
+            android:name=".SimpleChat"
+            android:exported="true" />
 
 
         <!-- Main activity (Entry point of your application) -->
