--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:exported="false"/>
         <activity
             android:name=".SimpleChat"
-            android:exported="false"/>
+            android:exported="true"/>
         <activity
             android:name=".ChatActivity"
             android:exported="false"/>
